[gd_scene load_steps=24 format=3 uid="uid://vveuub1gdeuw"]

[ext_resource type="Script" path="res://scene/game/level/levels/level.gd" id="1_q04ye"]
[ext_resource type="PackedScene" uid="uid://cwijwftwr44r3" path="res://scene/ui/background_scene.tscn" id="2_4l085"]
[ext_resource type="PackedScene" uid="uid://bnc837r0fcok6" path="res://scene/ui/stage_bg.tscn" id="3_adus5"]
[ext_resource type="Script" path="res://script/ui_sound.gd" id="4_i324l"]
[ext_resource type="PackedScene" uid="uid://cwb8wxvcobvus" path="res://scene/game/inventory/inventory.tscn" id="5_wfsfq"]
[ext_resource type="PackedScene" uid="uid://deiwl7gpwkhmk" path="res://scene/game/game_ui/step_control.tscn" id="6_l8oxm"]
[ext_resource type="PackedScene" uid="uid://chqaicamvdhcb" path="res://scene/game/game_ui/status_ui.tscn" id="7_2urv7"]
[ext_resource type="PackedScene" uid="uid://bxqw21tofdkhb" path="res://scene/game/game_ui/power_ui.tscn" id="8_6efnq"]
[ext_resource type="Shader" path="res://shader/scene_tran.gdshader" id="9_qi7bm"]
[ext_resource type="Texture2D" uid="uid://cncuvt1fst73s" path="res://asset/image/background3.png" id="10_ng0wh"]
[ext_resource type="Texture2D" uid="uid://dar60x7kv27e4" path="res://asset/image/ui/mark_question.png" id="11_3684n"]
[ext_resource type="PackedScene" uid="uid://cnepdj0wy24dp" path="res://scene/ui/tutorial_scene.tscn" id="12_mvbcx"]
[ext_resource type="Script" path="res://scene/game/level/level_control.gd" id="13_lnr7k"]
[ext_resource type="Script" path="res://scene/game/entity/resource/chest_data.gd" id="14_vy3gk"]
[ext_resource type="TileSet" uid="uid://clgyila4yj1u3" path="res://scene/game/level/base_tileset.tres" id="15_3evl1"]
[ext_resource type="PackedScene" uid="uid://c3m3aie8hlsr" path="res://component/grid_indicator_component.tscn" id="16_7kqw1"]
[ext_resource type="TileSet" uid="uid://ds1opxjusum1b" path="res://scene/game/level/entity_tileset.tres" id="17_yuyda"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k2xhj"]
shader = ExtResource("9_qi7bm")
shader_parameter/progress = 1.0
shader_parameter/multiplier = 3.0
shader_parameter/angle = 0.0
shader_parameter/anchor = Vector2(0.5, 0.5)
shader_parameter/anchorOffset = 1.0
shader_parameter/diamondPixelSize = 80.0

[sub_resource type="Animation" id="Animation_puw1d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gredy"]
resource_name = "scene_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:material:shader_parameter/progress")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wc1st"]
_data = {
"RESET": SubResource("Animation_puw1d"),
"scene_open": SubResource("Animation_gredy")
}

[sub_resource type="Resource" id="Resource_geuyl"]
script = ExtResource("14_vy3gk")
cell_idx = Vector2i(3, 0)
contain_type = 2
contain_count = 1

[sub_resource type="Resource" id="Resource_vxa5p"]
script = ExtResource("14_vy3gk")
cell_idx = Vector2i(1, 3)
contain_type = 4
contain_count = 1

[node name="Level2" type="Node2D"]
script = ExtResource("1_q04ye")

[node name="LevelBGLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundTextureRect" parent="LevelBGLayer" instance=ExtResource("2_4l085")]

[node name="StageBG" parent="LevelBGLayer" node_paths=PackedStringArray("contain_tile") instance=ExtResource("3_adus5")]
contain_tile = NodePath("../../TileContainer/BaseTileMap")

[node name="LevelUILayer" type="CanvasLayer" parent="." groups=["level_ui_layer"]]

[node name="UISound" type="Node" parent="LevelUILayer"]
script = ExtResource("4_i324l")
root_path = NodePath("..")

[node name="Inventory" parent="LevelUILayer" instance=ExtResource("5_wfsfq")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 904.0
offset_right = 16.0
offset_bottom = 904.0
grow_horizontal = 1
grow_vertical = 1

[node name="DebugContainer" type="VBoxContainer" parent="LevelUILayer"]
visible = false
offset_left = 64.0
offset_top = 768.0
offset_right = 384.0
offset_bottom = 1008.0

[node name="Label" type="Label" parent="LevelUILayer/DebugContainer"]
layout_mode = 2
text = "
Test Info
Test Level 1"

[node name="WinButton" type="Button" parent="LevelUILayer/DebugContainer"]
custom_minimum_size = Vector2(320, 2.08165e-12)
layout_mode = 2
text = "Win"

[node name="LoseButton" type="Button" parent="LevelUILayer/DebugContainer"]
custom_minimum_size = Vector2(320, 2.08165e-12)
layout_mode = 2
text = "Lose"

[node name="ResetButton" type="Button" parent="LevelUILayer/DebugContainer"]
custom_minimum_size = Vector2(320, 2.08165e-12)
layout_mode = 2
text = "Reset"

[node name="StepControl" parent="LevelUILayer" instance=ExtResource("6_l8oxm")]
offset_left = 1484.0
offset_right = 1484.0

[node name="StatusUI" parent="LevelUILayer" instance=ExtResource("7_2urv7")]

[node name="PowerUi" parent="LevelUILayer" instance=ExtResource("8_6efnq")]
offset_left = 1464.0
offset_top = 832.0
offset_right = 1464.0
offset_bottom = 832.0

[node name="TextureRect" type="TextureRect" parent="LevelUILayer"]
visible = false
material = SubResource("ShaderMaterial_k2xhj")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_ng0wh")
expand_mode = 2
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelUILayer"]
libraries = {
"": SubResource("AnimationLibrary_wc1st")
}
autoplay = "scene_open"

[node name="MarginContainer" type="MarginContainer" parent="LevelUILayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 64.0
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="TutorialButton" type="Button" parent="LevelUILayer/MarginContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
focus_mode = 0
icon = ExtResource("11_3684n")
icon_alignment = 1
expand_icon = true

[node name="TutorialScene" parent="." instance=ExtResource("12_mvbcx")]
process_mode = 3
visible = false
end_idx = 6
begin_idx = 5

[node name="Timer" type="Timer" parent="."]

[node name="LevelControl" type="Node" parent="." node_paths=PackedStringArray("base_tile", "entity_tile", "inventory", "step_timer", "tutorial_scene")]
unique_name_in_owner = true
script = ExtResource("13_lnr7k")
base_tile = NodePath("../TileContainer/BaseTileMap")
entity_tile = NodePath("../TileContainer/EntityTileMap")
inventory = NodePath("../LevelUILayer/Inventory")
step_timer = NodePath("../Timer")
tutorial_scene = NodePath("../TutorialScene")
level_name = "Level 2"
is_auto_run = false
chest_contains = Array[ExtResource("14_vy3gk")]([SubResource("Resource_geuyl"), SubResource("Resource_vxa5p")])

[node name="TileContainer" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(640, 128)

[node name="BaseTileMap" type="TileMap" parent="TileContainer"]
tile_set = ExtResource("15_3evl1")
format = 2
layer_0/tile_data = PackedInt32Array(196608, 65536, 0, 262144, 65536, 0, 1, 65536, 0, 65537, 65536, 1, 131073, 65536, 1, 196609, 65536, 1, 262145, 65536, 1, 2, 65536, 1, 65538, 65536, 0, 131074, 65536, 0, 196610, 65536, 0, 262146, 65536, 0, 3, 65536, 1, 65539, 65536, 0, 131075, 65536, 0, 196611, 65536, 0, 262147, 65536, 1, 4, 65536, 1, 65540, 65536, 0, 131076, 65536, 0, 196612, 65536, 1, 262148, 65536, 1, 0, 65536, 0, 65536, 65536, 0, 131072, 65536, 0)

[node name="GridIndicatorComponent" parent="TileContainer" node_paths=PackedStringArray("tile") instance=ExtResource("16_7kqw1")]
tile = NodePath("../BaseTileMap")

[node name="EntityTileMap" type="TileMap" parent="TileContainer"]
tile_set = ExtResource("17_yuyda")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 262145, 65536, 0, 4, 65536, 805306368, 2, 0, 1, 131073, 0, 1, 196609, 262144, 0, 3, 262144, 0, 196612, 65536, 1, 262148, 327680, 0, 65537, 131072, 0, 262147, 65536, 1)

[node name="EntityContainer" type="Node2D" parent="TileContainer/EntityTileMap"]
unique_name_in_owner = true

[connection signal="pressed" from="LevelUILayer/DebugContainer/WinButton" to="." method="_on_win_button_pressed"]
[connection signal="pressed" from="LevelUILayer/DebugContainer/LoseButton" to="." method="_on_lose_button_pressed"]
[connection signal="pressed" from="LevelUILayer/DebugContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="LevelUILayer/MarginContainer/TutorialButton" to="LevelControl" method="_on_tutorial_button_pressed"]
